small chhanges on the navigation and the content sections (links align, small error fixes)

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,7 @@ html, body {
   border: 1px solid gainsboro;
   border-radius: .5rem;
   /* padding: .5rem;; */
+  overflow: hidden;
 }
 
 #header{
@@ -104,18 +105,23 @@ html, body {
  }
 
  nav {
-  display: flex; 
-  justify-content: space-between; 
+
+  /* justify-content: space-between;  */
   /* padding: 1rem 2rem;  */
   background: rgb(163, 110, 41);
   /* margin: .5rem -.5rem .5rem -.5rem;  */
   /* text-align: center;   */
+  
 }
 
 nav ul {
-  display: flex; 
   list-style: none;
-   
+  display: flex; 
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1em;
+  padding: 1rem;
+  margin-top: 0;
 }
 
 nav li {
@@ -134,11 +140,14 @@ nav a:hover {
   background-color: rgb(0, 0, 0);
   height: auto;
 }
+
+
 #content {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
-  
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1em;
   text-align: center;
+  height: auto;
 }
 
 article {
@@ -152,6 +161,7 @@ article {
   overflow: hidden;
   width: 150px;
   height: 150px;
+  margin-bottom: 1rem;
 }
 
 .circle-image img {
@@ -220,6 +230,10 @@ footer {
 
 .bottom {
   position:absolute;
+  left: 0;
+  right: 0;
   bottom: 0;
-  left: 25%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
